Change log for iftop
$Id$

0.9

Now works on FreeBSD
Added service resolution toggle ("R")
Added on-line help ("h")
More fixes to rate display
Improved interface selection (excludes lo:* and vmnet*)

0.8

Added support for displaying port numbers
Minor fixes to rate display
Minor fix to netmask handling (specifying /32 was broken)
Updated RPM spec file 
    Iain Lea <iain@bricbrac.de>
Added pause functionality (P)
Changed behaviour of source/dest traffic aggregation

0.7 02/10/02

Fixed missing sll.h file.

0.6 28/08/02

Fixed segfault bug affecting some systems
Added support for Linux cooked sockets
    Michael Bergbauer <michael@noname.franken.de>

0.5 26/08/02

Added support for monitoring PPP interfaces
Converted longs to double longs in various places to avoid overflow problems
Minor bug fixes (usage messages, exit on error)
Improved selection of default interface when none specified

0.4 16/04/02

No code changes
Added RPM spec file
    Riku Meskanen <mesrik@cc.jyu.fi>
Fixes to "make install"
    Steve Baker <sjb@ambrielconsulting.com>

0.3 13/04/02

Fixed segfault bug.
Added src/dest aggregation.

0.2 02/04/02

Added -n option to analyse traffic flows across a network boundary.
Added cumulative traffic totals.
Graphs now optional.
UI more responsive to key presses.
Auto-sizing bar graph scale.

0.1 29/3/02

First release.